#-----------------------------------------------------------------------------
# CMakeLists file for building the CHAI3D examples.
#
# Created by Sonny Chan
#	March 2009, Stanford University
#-----------------------------------------------------------------------------

# Recurse into the directory for each example
ADD_SUBDIRECTORY(01-devices)
#ADD_SUBDIRECTORY(02-boards)
ADD_SUBDIRECTORY(10-oring)
ADD_SUBDIRECTORY(11-effects)
ADD_SUBDIRECTORY(12-polygons)
ADD_SUBDIRECTORY(20-map)
ADD_SUBDIRECTORY(21-object)
ADD_SUBDIRECTORY(22-chrome)
ADD_SUBDIRECTORY(23-tooth)
#ADD_SUBDIRECTORY(24-turntable)
ADD_SUBDIRECTORY(25-cubic)
#ADD_SUBDIRECTORY(40-ODE-cube)
#ADD_SUBDIRECTORY(41-ODE-pool)
#ADD_SUBDIRECTORY(42-ODE-mesh)
#ADD_SUBDIRECTORY(50-GEL-membrane)
#ADD_SUBDIRECTORY(51-GEL-cell)
#ADD_SUBDIRECTORY(52-GEL-duck)
