#-----------------------------------------------------------------------------
# CMakeLists file for building the CHAI3D examples.
#
# Created by Sonny Chan
#	March 2009, Stanford University
#-----------------------------------------------------------------------------

# Recurse into the directory for each example
ADD_SUBDIRECTORY(01-mydevice)
ADD_SUBDIRECTORY(10-oring)
ADD_SUBDIRECTORY(11-effects)
ADD_SUBDIRECTORY(12-polygons)
ADD_SUBDIRECTORY(25-cubic)
ADD_SUBDIRECTORY(26-spinning_book)
ADD_SUBDIRECTORY(27-projectile)
